# prisma

./: .clangd  .devcontainer.json  .gitignore  .gitmodules  CMakeLists.android.txt  CMakeLists.txt  CMakeLists.unix.txt  README.md  embedded_python_cmd.bat.in  kratos_version.h.in  license.txt
applications/: CMakeLists.txt
embedded_python/: CMakeLists.txt  krun_main.cpp
kratos/: CMakeLists.txt  license.txt
kratos/containers/: array_1d.h  array_1d_boost_ublas_impl.h  array_1d_eigen_impl.h  bucket.h  buffer.h  const_deref_iterator.h  data_value_container.h  fix_data_value_container.cpp  fix_data_value_container.h  flags.h  model.cpp  model.h  partitioned_vector.h  periodic_variables_container.h  pointer_hash_map_set.h  pointer_vector.h  pointer_vector_map.h  pointer_vector_map_iterator.h  pointer_vector_set.h  set_identity_function.h  variable.h  variable_component.h  variable_data.cpp  variable_data.h  variables_list.cpp  variables_list.h  variables_list_data_value_container.cpp  variables_list_data_value_container.h  vector_component_adaptor.h  vector_map.h  vector_map_iterator.h  weak_pointer_vector.h  weak_pointer_vector_iterator.h
kratos/elements/: distance_calculation_element_simplex.h
kratos/geometries/: geometry.h  geometry_data.h  hexahedra_3d_20.h  hexahedra_3d_27.h  hexahedra_3d_8.h  hexahedra_interface_3d_8.h  line_1d_2.h  line_1d_3.h  line_2d.h  line_2d_2.h  line_2d_3.h  line_3d_2.h  line_3d_3.h  line_gl_3d_2.h  nurbs_2d.h  nurbs_3d.h  nurbs_base_geometry.h  plane.h  point.cpp  point.h  point_2d.h  point_3d.h  prism_3d_15.h  prism_3d_6.h  prism_interface_3d_6.h  quadrilateral_2d_4.h  quadrilateral_2d_8.h  quadrilateral_2d_9.h  quadrilateral_3d_4.h  quadrilateral_3d_8.h  quadrilateral_3d_9.h  quadrilateral_interface_2d_4.h  quadrilateral_interface_3d_4.h  sphere_3d_1.h  tetrahedra_3d_10.h  tetrahedra_3d_4.h  triangle_2d_3.h  triangle_2d_6.h  triangle_3d_3.h  triangle_3d_6.h
kratos/includes/: c2c_variables.h  cfd_variables.h  checks.h  communicator.h  condition.h  constant.h  constitutive_law.h  convection_diffusion_settings.h  datafile_io.h  define.h  define_python.h  dem_variables.h  deprecated_variables.h  dof.h  eigen_interface.h  element.h  fnv_1a_hash.h  geometrical_object.h  gid_gauss_point_container.h  gid_io.h  gid_mesh_container.h  global_variables.h  io.h  json_io.h  kernel.h  key_hash.h  kratos.h  kratos_application.h  kratos_components.h  kratos_exception.h  kratos_export_api.h  kratos_flags.h  kratos_parameters.h  kratos_version.h  legacy_structural_app_vars.h  linalg_interface.h  linear_constraint.h  linear_master_slave_constraint.h  master_slave_constraint.h  matrix_market_interface.h  (+19 more)
kratos/integration/: hexahedron_gauss_legendre_integration_points.h  hexahedron_gauss_lobatto_integration_points.h  integration_point.h  line_gauss_legendre_integration_points.h  line_gauss_lobatto_integration_points.h  prism_gauss_legendre_integration_points.h  prism_gauss_lobatto_integration_points.h  quadrilateral_gauss_legendre_integration_points.h  quadrilateral_gauss_lobatto_integration_points.h  tetrahedron_gauss_legendre_integration_points.h  triangle_gauss_legendre_integration_points.h  triangle_gauss_radau_integration_points.h
kratos/linear_solvers/: bicgstab_solver.h  cg_solver.h  cuthill_mckee_reorderer.h  deflated_cg_solver.h  deflated_gmres_solver.h  diagonal_preconditioner.h  direct_solver.h  ilu0_preconditioner.h  ilu_preconditioner.h  iterative_solver.h  linear_solver.h  luc_solver.h  mixedup_linear_solver.h  power_iteration_eigenvalue_solver.h  preconditioner.h  rayleigh_quotient_iteration_eigenvalue_solver.h  reorderer.h  scaling_solver.h  skyline_lu_factorization_solver.h  superlu_solver.h  tfqmr_solver.h  umfpack_lu_solver.h
kratos/processes/: find_conditions_neighbours_process.h  find_elements_neighbours_process.h  find_nodal_neighbours_process.h  graph_coloring_process.h  process.h
kratos/python/: add_c2c_variables_to_python.cpp  add_c2c_variables_to_python.h  add_cfd_variables_to_python.cpp  add_cfd_variables_to_python.h  add_constant_matrix_to_python.cpp  add_constitutive_law_to_python.cpp  add_constitutive_law_to_python.h  add_constraint_to_python.cpp  add_constraint_to_python.h  add_containers_to_python.cpp  add_containers_to_python.h  add_dem_variables_to_python.cpp  add_dem_variables_to_python.h  add_deprecated_variables_to_python.cpp  add_deprecated_variables_to_python.h  add_equation_systems_to_python.h  add_geometries_to_python.cpp  add_integration_points_to_python.cpp  add_integration_points_to_python.h  add_io_to_python.cpp  add_io_to_python.h  add_kernel_to_python.cpp  add_kernel_to_python.h  add_kratos_application_to_python.cpp  add_kratos_application_to_python.h  add_kratos_parameters_to_python.cpp  add_legacy_structural_app_vars_to_python.cpp  add_legacy_structural_app_vars_to_python.h  add_linear_solvers_to_python.cpp  add_linear_solvers_to_python.h  add_matrix_market_interface_to_python.cpp  add_matrix_market_interface_to_python.h  add_matrix_to_python.cpp  add_matrix_to_python.h  add_mesh_to_python.cpp  add_mesh_to_python.h  add_model_part_to_python.cpp  add_model_part_to_python.h  add_model_to_python.cpp  add_model_to_python.h  (+54 more)
kratos/python_interface/: __init__.py
kratos/sources/: bounding_volume_tree.cpp  c2c_variables.cpp  cfd_variables.cpp  code_location.cpp  communicator.cpp  condition.cpp  constitutive_law.cpp  dem_variables.cpp  deprecated_variables.cpp  element.cpp  global_variables.cpp  integration_rules.cpp  io.cpp  kernel.cpp  kratos_application.cpp  kratos_components.cpp  kratos_exception.cpp  kratos_parameters.cpp  legacy_structural_app_vars.cpp  linear_master_slave_constraint.cpp  math_utils.cpp  mmio.c  model_part.cpp  model_part_io.cpp  mpi_communicator.cpp  periodic_condition.cpp  reorder_consecutive_model_part_io.cpp  serializer.cpp  timer.cpp  variables.cpp
kratos/spaces/: dense_space.h  mpi_decomposition_space.h  parallel_ublas_space.h  ublas_space.h
kratos/spatial_containers/: bins_dynamic_objects.h  bounding_volume_tree.h  octree_binary.h  tree.h
kratos/templates/: hbui_header_template.h
(+98 files in other folders)
